Fix logo verticle align

--- a/app/sass/components/_header.sass
+++ b/app/sass/components/_header.sass
@@ -4,6 +4,10 @@
     padding-top: 50px
 
 .logo
+  &__link
+    display: flex
+    align-content: center
+    height: 100%
   &__img
     height: 30px
 
